
#set(CMAKE_AUTOMOC ON)

# Glob all sources file inside directory ${CMAKE_CURRENT_SOURCE_DIR}
file(GLOB_RECURSE HOLOSUITE_SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.cxx
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/*.C
	${CMAKE_CURRENT_SOURCE_DIR}/*.cc
	${CMAKE_CURRENT_SOURCE_DIR}/*.cg
	${CMAKE_CURRENT_SOURCE_DIR}/*.cl
)

foreach(f ${HOLOSUITE_SRC_FILES})
    # Get the path of the file relative to ${DIRECTORY},
    # then alter it (not compulsory)
    file(RELATIVE_PATH SRCGR ${CMAKE_CURRENT_SOURCE_DIR} ${f})
    #set(SRCGR "${SRCGR}")

    # Extract the folder, ie remove the filename part
    string(REGEX REPLACE "(.*)(/[^/]*)$" "\\1" SRCGR ${SRCGR})

    # Source_group expects \\ (double antislash), not / (slash)
    string(REPLACE / \\ SRCGR ${SRCGR})
    source_group("${SRCGR}" FILES ${f})
endforeach()

SET (holosuite_BIN ${PROJECT_NAME})

IF(WIN32)
	ADD_DEFINITIONS(-DFREEGLUT_LIB_PRAGMAS=0)
ENDIF()

IF(WITH_AUDIO)
	INCLUDE_DIRECTORIES(${OPUS_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${PORTAUDIO_INCLUDE_DIRS})
	ADD_DEFINITIONS(-DENABLE_HOLO_AUDIO)
ENDIF()

IF(WITH_DSCP2)
	INCLUDE_DIRECTORIES(${CG_INCLUDE_DIR})
	ADD_DEFINITIONS(-DENABLE_HOLO_DSCP2)
ENDIF()

IF(WITH_DSCP4)
	INCLUDE_DIRECTORIES(../dscp4-lib)
	ADD_DEFINITIONS(-DENABLE_HOLO_DSCP4)
	IF(BUILD_DSCP4_STATIC)
		ADD_DEFINITIONS(-DDSCP4_STATIC)
	ENDIF()
ENDIF()

IF(WITH_ZSPACE_API)
	INCLUDE_DIRECTORIES(${ZSPACE_API_INCLUDE_DIR})
	ADD_DEFINITIONS(-DENABLE_HOLO_ZSPACE)
ENDIF()

IF(WITH_LEAPSDK)
	INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIR})
	ADD_DEFINITIONS(-DENABLE_HOLO_LEAPSDK)
ENDIF()

IF(WITH_ODE)
	INCLUDE_DIRECTORIES(${ODE_INCLUDE_DIRS})
	ADD_DEFINITIONS(-DENABLE_HOLO_ODE)
ENDIF()

ADD_EXECUTABLE(${holosuite_BIN} ${HOLOSUITE_SRC_FILES})

TARGET_LINK_LIBRARIES(${holosuite_BIN} holosuite-lib ${LIBLOG4CXX_LIBRARIES} ${Boost_LIBRARIES})

IF(WITH_DSCP4)
	TARGET_LINK_LIBRARIES(${holosuite_BIN} dscp4-lib)
ENDIF()

SET_TARGET_PROPERTIES(${holosuite_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${holosuite_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${holosuite_BIN} DESTINATION bin)
